[package]
name = "transfer"
version = "0.1.0"
authors = ["luo4lu <luo4lu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
log = { version = "0.4.5", features = ["std"] }
env_logger = "0.7.1"
simple_logger = "0.5"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.7.3"
tokio-postgres = { version = "0.5", features = ["with-serde_json-1","with-chrono-0_4"] }
deadpool-postgres = "0.5.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v1"] }
urlencoding = "1.1.1"
rust-crypto = "0.2.36"
base64 = "0.12.3"
time = "0.2.16"
regex = "1.3.9"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false